<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ci-example</name>
  <version>0.1.0</version>
  <description>This example will show continuous integration in action.</description>
  <maintainer email="zhihao.zhang1@unsw.edu.au">Zhihao Zhang</maintainer>
  <license>Apache License 2.0</license>
  <author>Zhihao Zhang</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

