<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joystick_example</name>
  <version>0.1.0</version>
  <description>Example on how to use joystick</description>
  <maintainer email="zhihao.zhang1@unsw.edu.au">Zhihao Zhang</maintainer>
  <license>Apache License 2.0</license>
  <author>Zhihao Zhang</author>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

